
- Added accounting infrastucture, to log request informations. This can be used for statistics.
- Added tools for queries by point, polygon and circle (in addition to existing query-by-bbox tool)
- Added AJAX support in plugins
- Added WMS-layers browsing plugin
- Added hooks capabilities in views processing
- Added sampleProject, a start project to build your own ones upon it

2006-02-14: CartoWeb 3.2.0 
==========================

- Added mapOverlay plugin to dynamically search, create, update or delete mapfile elements.
- Added edition plugin ("edit") to create, edit or delete geographical data on the browser. 
- Added "toolPicker", an extensible JavaScript tool to choose colors and symbols.
- Added support for GIF images in PDF export.
- Added support for additional fonts in PDF export.
- PDF form inputs are now saved while browsing the viewer and their initial states are set in config files.
- Added built-in toolbar rendering switching system: radio buttons, icons borders, icons switching.
- Improved cw3setup.php (installation script) to focus on given projects.
- Added "rotate" mode for PDF export: selection of to-be-exported rectangle, including rotation.
- Added optional reference marks on displayed map and/or PDF export.

2005-10-19: CartoWeb 3.1.0
==========================

- Redesigned DHTML map interface as a convenient object-oriented API.
- Added JavaScript constraints for polygons: maximum number of points, no crossing.
- Added new improved tabs interface.
- Added support of styles with shapes and labels in outline plugin.
- Added new profile parameter for quick development/production switch.
- Added possibility to separate toolbar icons in several groups dispatched wherever in the interface layout.
- Improved PDF export plugin:
    o Support for multiline text blocks ;
    o Support for external data source (files, databases) for text blocks ;
    o Debugged overview extent ;
    o Customizable overview outline colors ;